--- a/site-acessivel-aula-03/site-acessivel-aula-03/styles.css
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/styles.css
@@ -8,7 +8,7 @@
 body {
     font-size: 1rem;
     font-family: 'Montserrat';
-    background-color: #e4abd1;
+    background-color: #eea7d7;
 }
 
 header {
