--- a/site-acessivel-aula-03/site-acessivel-aula-03/styles.css
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
-    --laranja-claro:rgb(255, 208, 235);
+    --laranja-claro:rgb(10, 9, 10);
 }
 
 body {
@@ -22,7 +22,7 @@ section {
 
 
 .nav-link {
-    color: #f8c8f6;
+    color: #050205;
     font-weight: 600;
 }
 
