--- a/site-acessivel-aula-03/site-acessivel-aula-03/styles.css
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/styles.css
@@ -119,7 +119,7 @@ h2 {
 }
 
 .formulario {
-    background-color: #ffffff;
+    background-color: #f00ce174;
     padding: 2rem;
     /* Espaçamento interno dentro do formulário */
     border-radius: 10px;
