--- a/site-acessivel-aula-03/site-acessivel-aula-03/styles.css
+++ b/site-acessivel-aula-03/site-acessivel-aula-03/styles.css
@@ -28,7 +28,7 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('img/download.jpeg');
+    background-image: url('img/download\ \(1\).jpeg');
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
